--- a/app/scss/components/navbar.scss
+++ b/app/scss/components/navbar.scss
@@ -18,7 +18,7 @@
       text-transform: uppercase;
       text-align: center;
       padding: rem(10) 0;
-      color: #244198;
+      color: var(--primary-light);
 
       & div {
         width: rem(24);
