--- a/app/scss/components/main.scss
+++ b/app/scss/components/main.scss
@@ -19,8 +19,9 @@
 
       &--poster {
         cursor: pointer;
-        width: rem(280);
-        height: rem(420);
+        width: rem(190);
+        height: auto;
+        aspect-ratio: 2 / 3;
         border-radius: rem(6);
         box-shadow: 0 rem(10) rem(25) 0 rgba(0, 0, 0, 0.15);
 
