--- a/styles.css
+++ b/styles.css
@@ -175,7 +175,7 @@ a:active {
 
 .main__container-movie--poster {
   cursor: pointer;
-  width: 150px;
+  width: 9.375rem;
   height: auto;
   aspect-ratio: 2/3;
   border-radius: 0.375rem;
@@ -184,12 +184,12 @@ a:active {
 
 @media (min-width: 40em) {
   .main__container-movie--poster {
-    width: 180px;
+    width: 11.25rem;
   }
 }
 @media (min-width: 71.875em) {
   .main__container-movie--poster {
-    width: 210px;
+    width: 13.125rem;
   }
 }
 .nav {
