--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -13,6 +13,12 @@ html {
   padding: 0;
 }
 
+#root {
+  // Centrar main
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  height: 100vh;
+}
 body {
   font-family: var(--font-roboto);
   font-size: rem(14);
