--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -62,6 +62,14 @@
   --outline-dark: #8f9099;
   --surface-variant-dark: #44464f;
   --on-surface-variant-dark: #c5c6d0;
+
+  /* Gaumont */
+  --orange: #ff663c;
+  --yellow: #f3c567;
+  --kind-of-green: #59c0ab;
+  --blue-1: #1c3f92;
+  --blue-2: #1f419a;
+  --blue-3: #09328a;
 }
 
 :root {
