--- a/app/scss/components/navbar.scss
+++ b/app/scss/components/navbar.scss
@@ -5,36 +5,56 @@
   bottom: 0;
   left: 0;
   width: 100%;
+  height: 9.5%;
   background-color: var(--container-bg);
+
+  display: flex;
 
   &__list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 
+    width: 100%;
     padding: 0;
     font-size: rem(10);
 
     &-item {
-      text-transform: uppercase;
-      text-align: center;
-      padding: rem(10) 0;
-      color: var(--primary-light);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
 
-      & div {
-        width: rem(24);
-        margin: 0 auto;
+      text-transform: capitalize;
+      text-align: center;
+      color: #656e6b;
+      transition: var(--transition);
+
+      // WHEN PRESSED ACTIVAR ESTO
+      &:first-of-type span {
+        background-color: hsl(164, 37%, 86%);
+        font-variation-settings: "FILL" 1;
+        color: #000;
+      }
+      // WHEN PRESSED ACTIVAR ESTO
+      &:first-of-type a {
+        font-weight: 700;
+        color: #000;
+      }
+
+      &--icon {
+        padding: rem(4) rem(20);
+        border-radius: rem(999);
       }
 
       &--anchor {
-        padding: rem(10) rem(20);
-        border-radius: rem(999);
-
-        &:hover {
-          cursor: pointer;
-          background-color: var(--primary-light);
-          transition: var(--transition);
-        }
+        font-size: rem(12);
+        color: #656e6b;
+        letter-spacing: 0.4px;
       }
     }
   }
+}
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
