--- a/app/scss/components/overlay.scss
+++ b/app/scss/components/overlay.scss
@@ -4,12 +4,12 @@
   display: none;
 }
 
+// Hacerlo de 0 con grid
 .modal {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
   width: 50%;
 
   background-color: #fff;
@@ -21,7 +21,6 @@
 
 .overlay {
   position: absolute;
-  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
