--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,13 @@
   --outline-dark: #8f9099;
   --surface-variant-dark: #44464f;
   --on-surface-variant-dark: #c5c6d0;
+  /* Gaumont */
+  --orange: #ff663c;
+  --yellow: #f3c567;
+  --kind-of-green: #59c0ab;
+  --blue-1: #1c3f92;
+  --blue-2: #1f419a;
+  --blue-3: #09328a;
 }
 
 :root {
@@ -207,37 +214,54 @@ a:active {
   bottom: 0;
   left: 0;
   width: 100%;
+  height: 9.5%;
   background-color: var(--container-bg);
+  display: flex;
 }
 
 .nav__list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  width: 100%;
   padding: 0;
   font-size: 0.625rem;
 }
 
 .nav__list-item {
-  text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  text-transform: capitalize;
   text-align: center;
-  padding: 0.625rem 0;
-  color: var(--primary-light);
+  color: #656e6b;
+  transition: var(--transition);
 }
 
-.nav__list-item div {
-  width: 1.5rem;
-  margin: 0 auto;
+.nav__list-item:first-of-type span {
+  background-color: hsl(164, 37%, 86%);
+  font-variation-settings: "FILL" 1;
+  color: #000;
 }
 
-.nav__list-item--anchor {
-  padding: 0.625rem 1.25rem;
+.nav__list-item:first-of-type a {
+  font-weight: 700;
+  color: #000;
+}
+
+.nav__list-item--icon {
+  padding: 0.25rem 1.25rem;
   border-radius: 62.4375rem;
 }
 
-.nav__list-item--anchor:hover {
-  cursor: pointer;
-  background-color: var(--primary-light);
-  transition: var(--transition);
+.nav__list-item--anchor {
+  font-size: 0.75rem;
+  color: #656e6b;
+  letter-spacing: 0.4px;
+}
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
 .hidden {
@@ -245,7 +269,7 @@ a:active {
 }
 
 .modal {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -259,7 +283,6 @@ a:active {
 
 .overlay {
   position: absolute;
-  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
