--- a/app/scss/components/navbar.scss
+++ b/app/scss/components/navbar.scss
@@ -36,17 +36,31 @@ FONT SIZE SYSTEM (px)
       text-align: center;
       color: var(--gray-nav);
 
+      cursor: pointer;
+
       &--icon {
         padding: rem(4) rem(20);
         border-radius: rem(999);
+
+        &.active {
+          background-color: var(--key-green-light);
+          font-variation-settings: "FILL" 1;
+          color: var(--black-blue);
+        }
       }
 
       &--anchor {
         font-size: rem(12);
         color: var(--gray-nav);
         letter-spacing: 0.4px;
+
+        &.active {
+          font-weight: 500;
+          color: var(--black-blue);
+        }
       }
 
+      /*
       // WHEN ACTIVE
       &:first-of-type span {
         background-color: var(--key-green-light);
@@ -58,6 +72,7 @@ FONT SIZE SYSTEM (px)
         font-weight: 500;
         color: var(--black-blue);
       }
+      */
     }
   }
 }
