--- a/app/scss/util/functions.scss
+++ b/app/scss/util/functions.scss
@@ -5,12 +5,4 @@
   @return (math.div($pixels, $context)) * 1rem;
 }
 
-// @mixin flex-center($variable) {
-//   display: flex;
-//   justify-content: center;
-//   align-items: $variable;
-// }
-
-// @include flex-center(center
-
-// sass --watch app/scss/styles.scss:styles.css)
+// sass --watch app/scss/styles.scss:styles.css
