--- a/app/scss/components/4-navbar.scss
+++ b/app/scss/components/4-navbar.scss
@@ -8,15 +8,16 @@ FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */
 
+/*
 .nav {
+  display: flex;
+
   position: fixed;
   bottom: 0; // Probar en distintos dispositivos por si queda 1px abajo
   left: 0;
   width: 100%;
   height: 9.5%;
   background-color: var(--white);
-
-  display: flex;
 
   &__list {
     display: grid;
@@ -59,7 +60,7 @@ FONT SIZE SYSTEM (px)
         }
       }
 
-      /*
+      
       // WHEN ACTIVE
       &:first-of-type span {
         background-color: var(--key-green-light);
@@ -71,11 +72,47 @@ FONT SIZE SYSTEM (px)
         font-weight: 500;
         color: var(--black-blue);
       }
-      */
+      
     }
   }
 }
 
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+}
+*/
+
+.nav {
+  // border: 3px solid blue;
+
+  @include breakpoint(medium) {
+    display: none;
+    position: static;
+  }
+  display: block;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #eee;
+
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: rem(20) 0;
+
+    &-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: rem(10);
+
+      // & .icon {
+      // }
+      & .anchor {
+        text-transform: uppercase;
+        color: var(--clr-black);
+      }
+    }
+  }
 }
