--- a/app/scss/components/_index.scss
+++ b/app/scss/components/_index.scss
@@ -1,6 +1,6 @@
 // Example
-@forward "footer";
-@forward "header";
-@forward "main";
-@forward "navbar";
-@forward "overlay";
+@forward "1-header";
+@forward "2-main";
+@forward "3-overlay";
+@forward "4-navbar";
+@forward "5-footer";
