--- a/app/scss/globals/_index.scss
+++ b/app/scss/globals/_index.scss
@@ -1,5 +1,6 @@
-@forward 'fonts';
-@forward 'colors';
-@forward 'boilerplate';
-@forward 'typography';
-@forward 'layout';
+@forward "boilerplate";
+@forward "colors";
+@forward "fonts";
+@forward "layout";
+@forward "reset";
+@forward "typography";
