--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -1,95 +1,19 @@
 :root {
-  /* LIGHT SCHEME */
-  --app-bg: #eff1ee;
-  --container-bg: #fbfdfa;
-  /* Primary */
-  --primary-light: #0056d0;
-  --on-primary-light: #ffffff;
-  --primary-container-light: #dae2ff;
-  --on-primary-container-light: #001847;
-  /* Secondary */
-  --secondary-light: #b02f00;
-  --on-secondary-light: #ffffff;
-  --secondary-container-light: #ffdbd1;
-  --on-secondary-container-light: #3b0900;
-  /* Tertiary */
-  --tertiary-light: #3e58b1;
-  --on-tertiary-light: #ffffff;
-  --tertiary-container-light: #dce1ff;
-  --on-tertiary-container-light: #001550;
-  /* Error */
-  --error-light: #ba1a1a;
-  --on-error-light: #ffffff;
-  --error-container-light: #ffdad6;
-  --on-error-container-light: #410002;
-  /* Background */
-  --background-light: #fefbff;
-  --on-background-light: #001849;
-  --background-container-light: #fefbff;
-  --on-background-container-light: #001849;
-  /* Outline */
-  --outline-light: #757780;
-  --surface-variant-light: #e1e2ec;
-  --on-surface-variant-light: #44464f;
-
-  /* DARK SCHEME */
-  /* Primary */
-  --primary-dark: #b1c5ff;
-  --on-primary-dark: #002c71;
-  --primary-container-dark: #00409f;
-  --on-primary-container-dark: #dae2ff;
-  /* Secondary */
-  --secondary-dark: #ffb5a0;
-  --on-secondary-dark: #5f1500;
-  --secondary-container-dark: #862200;
-  --on-secondary-container-dark: #ffdbd1;
-  /* Tertiary */
-  --tertiary-dark: #b6c4ff;
-  --on-tertiary-dark: #00277f;
-  --tertiary-container-dark: #224098;
-  --on-tertiary-container-dark: #dce1ff;
-  /* Error */
-  --error-dark: #ffb4ab;
-  --on-error-dark: #690005;
-  --error-container-dark: #93000a;
-  --on-error-container-dark: #ffdad6;
-  /* Background */
-  --background-dark: #001849;
-  --on-background-dark: #dbe1ff;
-  --background-container-dark: #001849;
-  --on-background-container-dark: #dbe1ff;
-  /* Outline */
-  --outline-dark: #8f9099;
-  --surface-variant-dark: #44464f;
-  --on-surface-variant-dark: #c5c6d0;
-
-  /* Gaumont */
-  --orange: #ff663c;
-  --yellow: #f3c567;
-  --kind-of-green: #59c0ab;
-  --blue-1: #1c3f92;
-  --blue-2: #1f419a;
-  --blue-3: #09328a;
-  --white: #eae8e9;
-
+  // COLORS
   // Palette: https://coolors.co/eef2fc-dde5f8-92a8dd-1f419a-223d81-060e23-030711
-  --white: #fff;
-  --white-blue: #eef2fc;
-  --very-light-blue: #dce4f9;
-  --light-blue: #92a8dd;
-  --primary-blue: #1f419a;
-  --dark-blur: #223d81;
-  --very-dark-blue: #060e23;
-  --black-blue: #030711;
-  --black: #000;
+  --clr-white: #fff;
+  --clr-white-blue: #eef2fc;
+  --clr-very-light-blue: #dce4f9;
+  --clr-light-blue: #92a8dd;
+  --clr-primary-blue: #1f419a;
+  --clr-dark-blur: #223d81;
+  --clr-very-dark-blue: #060e23;
+  --clr-black-blue: #030711;
+  --clr-black: #000;
 
-  --gray-nav: #656e6b;
-  --key-green: #59c0ab;
-  --key-green-light: #c4e9e1;
-  --key-orange: #ff663c;
-  --key-yellow: #f3c567;
-}
-
-:root {
-  --transition: all 0.3s;
+  --clr-gray-nav: #656e6b;
+  --clr-key-green: #59c0ab;
+  --clr-key-green-light: #c4e9e1;
+  --clr-key-orange: #ff663c;
+  --clr-key-yellow: #f3c567;
 }
