--- a/app/scss/globals/typography.scss
+++ b/app/scss/globals/typography.scss
@@ -1,14 +1,7 @@
-@use '../util' as *;
+@use "../util" as *;
 
-h1,
-h2,
-h3 {
-	margin-top: 0;
-	line-height: 1.1;
-}
-
-a,
-a:visited,
-a:active {
-	text-decoration: none;
+body {
+  font-family: var(--font-roboto);
+  font-size: rem(14);
+  color: var(--clr-black);
 }
