--- a/app/scss/components/4-navbar.scss
+++ b/app/scss/components/4-navbar.scss
@@ -91,9 +91,8 @@ FONT SIZE SYSTEM (px)
   }
   display: block;
   position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  inset: auto 0 0 0; /* top: auto, right: 0, bottom: 0, left: 0*/
+  height: 9.5%;
   background: #eee;
 
   &__list {
