--- a/styles.css
+++ b/styles.css
@@ -318,9 +318,8 @@ FONT SIZE SYSTEM (px)
 .nav {
   display: block;
   position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  inset: auto 0 0 0; /* top: auto, right: 0, bottom: 0, left: 0*/
+  height: 9.5%;
   background: #eee;
 }
 
