--- a/styles.css
+++ b/styles.css
@@ -116,8 +116,7 @@ FONT SIZE SYSTEM (px)
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2.25rem 4rem;
-  background: #eee;
+  padding: 1.5rem 0;
 }
 
 @media (min-width: 40em) {
@@ -171,7 +170,7 @@ FONT SIZE SYSTEM (px)
   max-width: 80%;
   margin-inline: auto;
   align-self: center;
-  padding: 1.25rem 0 7.5rem 0;
+  padding-bottom: 7.5rem;
 }
 
 @media (min-width: 40em) {
@@ -330,21 +329,28 @@ FONT SIZE SYSTEM (px)
   }
 }
 .nav__list {
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  padding: 1.25rem 0;
+  align-items: center;
 }
 
 .nav__list-item {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 0.625rem;
+  height: 100%;
+}
+
+.nav__list-item .icon {
+  color: #49494b;
 }
 
 .nav__list-item .anchor {
-  text-transform: uppercase;
-  color: var(--clr-black);
+  text-transform: capitalize;
+  color: #49494b;
 }
 
 /*
