--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -11,7 +11,8 @@
   --clr-black-blue: #030711;
   --clr-black: hsl(0, 0%, 0%);
 
-  --clr-gray-nav: hsl(100, 10%, 94%);
+  --clr-background: hsl(100, 10%, 94%);
+  --clr-dark-gray: hsl(240, 1%, 29%);
   --clr-key-green: hsl(168, 45%, 55%);
   --clr-key-green-light: hsl(167, 46%, 84%);
   --clr-key-orange: hsl(13, 100%, 62%);
