--- a/styles.css
+++ b/styles.css
@@ -11,21 +11,26 @@ FONT SIZE SYSTEM (px)
   height: 100vh;
 }
 
+body {
+  background: var(--clr-background);
+}
+
 :root {
-  --clr-white: #fff;
-  --clr-white-blue: #eef2fc;
-  --clr-very-light-blue: #dce4f9;
-  --clr-light-blue: #92a8dd;
-  --clr-primary-blue: #1f419a;
-  --clr-dark-blur: #223d81;
+  --clr-white: hsl(0, 0%, 100%);
+  --clr-white-blue: hsl(223, 70%, 96%);
+  --clr-very-light-blue: hsl(223, 71%, 92%);
+  --clr-light-blue: hsl(222, 52%, 72%);
+  --clr-primary-blue: hsl(223, 66%, 36%);
+  --clr-dark-blur: hsl(223, 58%, 32%);
   --clr-very-dark-blue: #060e23;
   --clr-black-blue: #030711;
-  --clr-black: #000;
-  --clr-gray-nav: #656e6b;
-  --clr-key-green: #59c0ab;
-  --clr-key-green-light: #c4e9e1;
-  --clr-key-orange: #ff663c;
-  --clr-key-yellow: #f3c567;
+  --clr-black: hsl(0, 0%, 0%);
+  --clr-background: hsl(100, 10%, 94%);
+  --clr-dark-gray: hsl(240, 1%, 29%);
+  --clr-key-green: hsl(168, 45%, 55%);
+  --clr-key-green-light: hsl(167, 46%, 84%);
+  --clr-key-orange: hsl(13, 100%, 62%);
+  --clr-key-yellow: hsl(40, 85%, 68%);
 }
 
 :root {
@@ -310,16 +315,14 @@ FONT SIZE SYSTEM (px)
   }
 }
 
-.material-symbols-outlined {
-  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
-}
+
 */
 .nav {
   display: block;
   position: fixed;
   inset: auto 0 0 0; /* top: auto, right: 0, bottom: 0, left: 0*/
   height: 9.5%;
-  background: #eee;
+  background: var(--clr-white);
 }
 
 @media (min-width: 40em) {
@@ -340,17 +343,35 @@ FONT SIZE SYSTEM (px)
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 0.625rem;
+  gap: 0.5rem;
   height: 100%;
 }
 
 .nav__list-item .icon {
-  color: #49494b;
+  color: var(--clr-dark-gray);
+  padding: 0.25rem 1.25rem;
+  border-radius: 62.4375rem;
+}
+
+.nav__list-item .icon.active {
+  background-color: var(--clr-key-green-light);
+  font-variation-settings: "FILL" 1;
+  color: var(--clr-black-blue);
 }
 
 .nav__list-item .anchor {
+  color: var(--clr-dark-gray);
+  font-size: 0.75rem;
   text-transform: capitalize;
-  color: #49494b;
+}
+
+.nav__list-item .anchor.active {
+  font-weight: 500;
+  color: var(--clr-black-blue);
+}
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
 /*
