--- a/app/sass/globals/boilerplate.scss
+++ b/app/sass/globals/boilerplate.scss
@@ -22,3 +22,45 @@ h1 {
   height: 100vh;
   margin: 0;
 }
+
+.rotulo {
+  display: none;
+  @include breakpoint(medium) {
+    display: block;
+  }
+  background: var(--clr-logo);
+  padding-block: rem(8);
+  position: relative;
+
+  &-text {
+    color: var(--clr-white);
+    text-align: center;
+    text-transform: uppercase;
+    font-size: rem(10);
+    letter-spacing: 1px;
+  }
+
+  &-close {
+    color: var(--clr-white);
+    font-size: rem(16);
+    padding: rem(8);
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+  }
+}
+
+.copyright {
+  display: none;
+  @include breakpoint(medium) {
+    display: block;
+  }
+  background: var(--clr-logo);
+  color: var(--clr-white);
+  text-align: center;
+  text-transform: uppercase;
+  font-size: rem(10);
+  letter-spacing: 1px;
+  padding-block: rem(8);
+}
