--- a/app/sass/components/2-main.scss
+++ b/app/sass/components/2-main.scss
@@ -15,7 +15,7 @@ FONT SIZE SYSTEM (px)
   flex: 1;
   display: flex;
   align-items: center;
-  margin: rem(16) 0 rem(96);
+  padding: rem(16) 0 rem(96);
 }
 
 .container {
