--- a/style.css
+++ b/style.css
@@ -648,6 +648,7 @@ FONT SIZE SYSTEM (px)
 .ciclos-information--image {
   margin-inline: auto;
   margin-bottom: 3rem;
+  display: flex;
 }
 
 .ciclos-information--title {
@@ -677,6 +678,37 @@ FONT SIZE SYSTEM (px)
 .precios {
   margin-inline: auto;
   padding-inline: 5vw;
+  /*
+  @at-root .valor {
+  }
+
+  &--heading {
+  }
+  &--publico {
+  }
+  &--publico-valor {
+  }
+  &--subheading {
+  }
+  &--jubilados {
+  }
+  &--jubilados-valor {
+  }
+  &--estudiantes {
+  }
+  &--estudiantes-valor {
+  }
+  &--afiliados {
+  }
+  &--afiliados-valor {
+  }
+  &--discapacitados {
+  }
+  &--discapacitados-valor {
+  }
+  &--empleados-valor {
+  }
+  */
 }
 
 .precios-container {
