--- a/app/sass/util/variables.scss
+++ b/app/sass/util/variables.scss
@@ -20,6 +20,7 @@
   --clr-black-blue: rgb(3, 7, 17);
   --clr-black: rgb(0, 0, 0);
 
+  --clr-lighter-gray: hsl(0, 0%, 87%);
   --clr-light-gray: #cccccc;
   --clr-gray: #888;
   --clr-dark-gray: rgb(73, 73, 75);
