--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
   --clr-very-dark-blue: rgb(6, 14, 35);
   --clr-black-blue: rgb(3, 7, 17);
   --clr-black: rgb(0, 0, 0);
+  --clr-lighter-gray: hsl(0, 0%, 87%);
   --clr-light-gray: #cccccc;
   --clr-gray: #888;
   --clr-dark-gray: rgb(73, 73, 75);
@@ -170,6 +171,7 @@ select {
   --clr-very-dark-blue: rgb(6, 14, 35);
   --clr-black-blue: rgb(3, 7, 17);
   --clr-black: rgb(0, 0, 0);
+  --clr-lighter-gray: hsl(0, 0%, 87%);
   --clr-light-gray: #cccccc;
   --clr-gray: #888;
   --clr-dark-gray: rgb(73, 73, 75);
@@ -185,6 +187,7 @@ FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */
 .header {
+  max-width: 99vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -365,20 +368,29 @@ FONT SIZE SYSTEM (px)
 
 @media (min-width: 71.875em) {
   .selection {
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.selection-container {
+  max-width: 50%;
+}
+
+@media (min-width: 71.875em) {
+  .selection-container {
+    max-width: 50%;
   }
 }
 .selection-movie--poster {
   border-radius: 0.25rem;
-  width: 250px;
+  width: 15.625rem;
   justify-self: center;
   grid-row: 1/3;
 }
 
 @media (min-width: 71.875em) {
   .selection-movie--poster {
-    width: 25vw;
-    grid-row: 1/4;
+    width: 25rem;
+    grid-row: 1/3;
   }
 }
 .selection-information--title {
@@ -396,11 +408,6 @@ FONT SIZE SYSTEM (px)
   grid-column: 1/-1;
 }
 
-@media (min-width: 71.875em) {
-  .selection-information__container {
-    grid-column: 2/3;
-  }
-}
 .info-container {
   display: flex;
   flex-direction: column;
@@ -430,7 +437,6 @@ FONT SIZE SYSTEM (px)
 .selection-information__fechas {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   align-items: center;
   cursor: pointer;
   border-block: 1px solid #ddd;
@@ -438,10 +444,24 @@ FONT SIZE SYSTEM (px)
   grid-column: 1/-1;
 }
 
+@media (min-width: 71.875em) {
+  .selection-information__fechas {
+    gap: 0.75rem;
+    padding-inline: 2.25rem;
+  }
+}
 .selection-information__fechas li {
   padding-inline: 1rem;
   display: flex;
   flex-direction: column;
+  transition: var(--transition-default);
+  border-bottom: 0.25rem solid var(--clr-very-light-blue);
+  color: var(--clr-dark-gray);
+}
+
+.selection-information__fechas li:hover {
+  border-bottom: 0.25rem solid var(--clr-light-blue);
+  color: var(--clr-darker-gray);
 }
 
 .selection-information__fechas li.active {
@@ -470,19 +490,31 @@ FONT SIZE SYSTEM (px)
   grid-column: 1/-1;
 }
 
+@media (min-width: 71.875em) {
+  .selection-information__horarios {
+    gap: 0.75rem;
+  }
+}
 .selection-information__horarios li {
   cursor: pointer;
   text-align: center;
   height: 100%;
   padding-inline: 3rem;
   border-radius: 62.4375rem;
+  border: 1px solid var(--clr-light-blue);
+  transition: var(--transition-default);
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+.selection-information__horarios li:hover {
+  background-color: var(--clr-light-blue);
+}
+
 .selection-information__horarios li.active {
-  background-color: var(--clr-navbar-icon);
+  background-color: var(--clr-primary-blue);
+  color: var(--clr-white-blue);
 }
 
 .selection-information__btns {
@@ -502,13 +534,12 @@ FONT SIZE SYSTEM (px)
   padding: 0.75rem 0;
   width: 100%;
   cursor: pointer;
-  transform: all 200ms;
   border-radius: 62.4375rem;
+  transition: var(--transition-defaults);
 }
 
 .selection-information--back:hover {
-  color: var(--clr-white);
-  background: var(--clr-light-blue);
+  background-color: var(--clr-lighter-gray);
 }
 
 .selection-information--comprar {
@@ -601,6 +632,7 @@ FONT SIZE SYSTEM (px)
   font-weight: 400;
   text-transform: capitalize;
   font-size: 1rem;
+  color: var(--clr-darker-gray);
 }
 
 .ciclos {
@@ -718,6 +750,10 @@ FONT SIZE SYSTEM (px)
   padding: 3rem;
   border: 0.125rem solid var(--clr-light-blue);
   border-radius: 0.75rem;
+}
+
+.precios-container p::first-letter {
+  text-transform: capitalize;
 }
 
 .titulo {
@@ -848,9 +884,13 @@ FONT SIZE SYSTEM (px)
 }
 
 .footer-information * {
-  color: var(--clr-white);
   color: var(--clr-primary-blue);
   text-decoration: none;
+  transition: var(--transition-default);
+}
+
+.footer-information *:hover {
+  color: var(--clr-very-dark-blue);
 }
 
 .footer-socials {
@@ -869,6 +909,11 @@ FONT SIZE SYSTEM (px)
   text-decoration: none;
   text-align: left;
   text-transform: capitalize;
+  transition: var(--transition-default);
+}
+
+.footer-socials *:hover {
+  color: var(--clr-very-dark-blue);
 }
 
 .footer-container + a {
@@ -889,6 +934,7 @@ FONT SIZE SYSTEM (px)
   --clr-very-dark-blue: rgb(6, 14, 35);
   --clr-black-blue: rgb(3, 7, 17);
   --clr-black: rgb(0, 0, 0);
+  --clr-lighter-gray: hsl(0, 0%, 87%);
   --clr-light-gray: #cccccc;
   --clr-gray: #888;
   --clr-dark-gray: rgb(73, 73, 75);
